src/objects/Indemnizable_Documento__c.object
<CustomObject>
    <fields>
        <fullName>IND_CAS_Opcional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opcional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_DAT_Fecha_Recepcion_Documento__c</fullName>
        <description>Representa la Fecha en la que el documento pasa a estado &quot;Recibido&quot;</description>
        <label>Fecha de Recepción de Documento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IND_LKP_Caso__c</fullName>
        <label>Intervención</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Documentos Indemnizable</relationshipLabel>
        <relationshipName>Documentos_Indemnizable</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IND_RES_Importe_Total__c</fullName>
        <label>Importe Total</label>
        <summarizedField>Indemnizable_Partida__c.INDP_DIV_Importe__c</summarizedField>
        <summaryForeignKey>Indemnizable_Partida__c.INDP_LKP_Documento_Indemnizable__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IND_SEL_Estado__c</fullName>
        <label>Estado</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Estados_Documento_Indemnizable</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_SEL_Tipo_Documento__c</fullName>
        <description>Tipo de Documento Indemnizable</description>
        <label>Tipo de Documento</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_de_Documento_Indeminizable</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_TXT_Descripcion__c</fullName>
        <label>Descripción</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Indemnizable: Documento</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indemnizable: Documentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>